--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
   </head>
   <main class="py-2 flex justify-start gap-2">
     <div class=" w-1/5 -mt-2 h-screen p-4" style="background-color: #F2EAE1;">
-      <img src="/images/logo.png" alt="" class="m-auto " />
+      <img src="../images/logo.png" alt="" class="m-auto " />
       
       <img src="/images/admin.png" alt="ad" class="rounded-full m-auto mt-8" />
       <h1 class="font-bold text-3xl text-black capitalize mt-4 text-center"><%= User.username %></h1>
